fix: chat on mobile

--- a/src/pages/ChatBot/ChatBot.module.scss
+++ b/src/pages/ChatBot/ChatBot.module.scss
@@ -14,6 +14,9 @@
     margin-right: auto;
     padding: 12px;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     @include media-breakpoint-down(lg) {
       width: 100%;
@@ -108,10 +111,11 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+    // background: #000;
 
     .message-wrapper-model {
       height: auto;
-      width: 100%;
+      width: 96%;
       display: flex;
       align-items: center;
       margin: 8px 0;
@@ -119,8 +123,6 @@
       .image-chat-wrapper {
         width: 28px;
         height: 28px;
-        // border-radius: 100rem;
-        // border: 1px solid black;
 
         img {
           width: 100%;
@@ -211,14 +213,18 @@
   }
 
   .input-chat {
-    position: absolute;
-    bottom: 20px;
+    // position: absolute;
+    // bottom: 20px;
     width: 100%;
     height: 48px;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-left: -12px;
+
+    // @include media-breakpoint-down(md){
+    //   bottom: ;
+    // }
 
     .message {
       height: 100%;
